--- a/FrontEnd/src/components/styles.module.scss
+++ b/FrontEnd/src/components/styles.module.scss
@@ -102,6 +102,7 @@
 .toast {
   transition-duration: 0.3s;
   background-color: #226ac1;
+  color: white;
   border-radius: 8px;
   width: 30%;
   text-align: center;
